Bug 1617371 - Remove callers to GetSelectedLocale. r=mkmelin